Changes based on feedback